bubbles-backend/src/main/istio/Deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bubblebackend
    version: v2
  name: bubblebackend-v2
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bubblebackend
      version: v2
  template:
    metadata:
      labels:
        app: bubblebackend
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        - name: JAVA_OPTIONS
          value: -Xms15m -Xmx15m -Xmn15m
        - name: BUBBLE_COLOR
          value: blue
        name: bubblebackend          
        image: quay.io/rhdevelopers/bubble-backend:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        resources:
          requests: 
            memory: "80Mi" 
            cpu: "200m" # 1/5 core
          limits:
            memory: "120Mi"
            cpu: "500m" 
        securityContext:
          privileged: false
      serviceAccount: "bubblebackend"
