bubbles-backend/src/main/istio/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bubblebackend
    version: v1
  name: bubblebackend-v1
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bubblebackend
      version: v1
  template:
    metadata:
      labels:
        app: bubblebackend
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: bubblebackend          
        image: quay.io/rhdevelopers/bubble-backend:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        resources:
          requests: 
            memory: "250Mi" 
            cpu: "1000m" # 1/5 core
          limits:
            memory: "250Mi"
            cpu: "1000m" 
        securityContext:
          privileged: false
      serviceAccount: "bubblebackend"
