bubbles-backend/src/main/istio/destination-rule-bubble-backend-v1-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bubble-backend
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  host: bubble-backend
  subsets:
  - labels:
      version: v1
    name: version-v1
  - labels:
      version: v2
    name: version-v2
