bubbles-backend/src/main/istio/virtual-service-mobile-bubble-backend-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bubble-backend
spec:
  hosts:
  - bubble-backend
  http:
  - match:
    - headers:
        user-agent:
          regex: .*Chrome.*
    route:
    - destination:
        host: bubble-backend
        subset: version-v1
  - route:
    - destination:
        host: bubble-backend
        subset: version-v2
